--- a/manu.html
+++ b/manu.html
@@ -21,7 +21,7 @@
           <h3>~ Types of coffee</h3>
           <h3>~ Interesting facts</h3>
           <h3>~ Funny stories</h3>
-          <h3>~ The norm of drinking coffee</h3>
+          <h3>~ The norm of drinking coffe</h3>
       </div>
   </div>
   </body>
